--- a/plays/templates/pre-ga-idms.j2
+++ b/plays/templates/pre-ga-idms.j2
@@ -5,6 +5,9 @@ metadata:
 spec:
   imageDigestMirrors:
   - mirrors:
+    - quay.io/redhat-user-workloads/ocp-art-tenant/art-images-share
+    source: registry.redhat.io/openshift4
+  - mirrors:
     - {{ prega_mirror }}/prega/test/rhceph-dev/odf4-odf-rhel9-operator
     source: registry.redhat.io/odf4/odf-rhel9-operator
   - mirrors:
