--- a/plays/templates/pre-ga-idms.j2
+++ b/plays/templates/pre-ga-idms.j2
@@ -1608,3 +1608,6 @@ spec:
   - mirrors:
     - {{ prega_mirror }}/prega/test/redhat-user-workloads/ocp-art-tenant/art-images-share
     source: quay.io/prega/test/redhat-user-workloads/ocp-art-tenant/art-images-share
+  - mirrors:
+    - {{ prega_mirror }}/prega/test/rhceph-dev/odf4-odf-blackbox-exporter-rhel9
+    source: registry.redhat.io/odf4/odf-blackbox-exporter-rhel9
