--- a/plays/templates/pre-ga-idms.j2
+++ b/plays/templates/pre-ga-idms.j2
@@ -532,6 +532,7 @@ spec:
     source: registry.redhat.io/kmm/kernel-module-management-hub-rhel9-operator
   - mirrors:
     - {{ prega_mirror }}/prega/test/openshift-gitops-1/console-plugin-rhel8
+    - {{ prega_mirror }}/prega/test/redhat-user-workloads/rh-openshift-gitops-tenant/console-plugin-rhel8
     source: registry.redhat.io/openshift-gitops-1/console-plugin-rhel8
   - mirrors:
     - {{ prega_mirror }}/prega/test/acm-d/insights-client-rhel9
@@ -639,6 +640,9 @@ spec:
     - {{ prega_mirror }}/prega/test/quay/quay-bridge-operator-rhel8
     source: registry.redhat.io/quay/quay-bridge-operator-rhel8
   - mirrors:
+    - {{ prega_mirror }}/prega/test/quay/quay-bridge-operator-rhel9
+    source: registry.redhat.io/quay/quay-bridge-operator-rhel9
+  - mirrors:
     - {{ prega_mirror }}/prega/test/rhel8/postgresql-15
     source: registry.redhat.io/rhel8/postgresql-15
   - mirrors:
@@ -723,6 +727,7 @@ spec:
     - {{ prega_mirror }}/prega/test/kmm/kernel-module-management-signing-rhel9
     source: registry.redhat.io/kmm/kernel-module-management-signing-rhel9
   - mirrors:
+    - {{ prega_mirror }}/prega/test/rhceph-dev/openshift-ose-kube-rbac-proxy-rhel9
     - {{ prega_mirror }}/prega/test/openshift4/ose-kube-rbac-proxy-rhel9
     - {{ prega_mirror }}/prega/test/redhat-user-workloads/ocp-art-tenant/art-images-share
     source: registry.redhat.io/openshift4/ose-kube-rbac-proxy-rhel9
@@ -742,7 +747,11 @@ spec:
     - {{ prega_mirror }}/prega/test/quay/quay-operator-rhel8
     source: registry.redhat.io/quay/quay-operator-rhel8
   - mirrors:
+    - {{ prega_mirror }}/prega/test/quay/quay-operator-rhel9
+    source: registry.redhat.io/quay/quay-operator-rhel9
+  - mirrors:
     - {{ prega_mirror }}/prega/test/openshift-gitops-1/gitops-rhel8-operator
+    - {{ prega_mirror }}/prega/test/redhat-user-workloads/rh-openshift-gitops-tenant/gitops-rhel8-operator
     source: registry.redhat.io/openshift-gitops-1/gitops-rhel8-operator
   - mirrors:
     - {{ prega_mirror }}/prega/test/openshift-gitops-1/argocd-agent-rhel8
@@ -755,6 +764,7 @@ spec:
     source: registry.redhat.io/openshift-gitops-1/argo-rollouts-rhel8
   - mirrors:
     - {{ prega_mirror }}/prega/test/openshift-gitops-1/argocd-rhel8
+    - {{ prega_mirror }}/prega/test/redhat-user-workloads/rh-openshift-gitops-tenant/argocd-rhel8
     source: registry.redhat.io/openshift-gitops-1/argocd-rhel8
   - mirrors:
     - {{ prega_mirror }}/prega/test/openshift-gitops-1/gitops-operator-bundle
@@ -842,6 +852,7 @@ spec:
     source: registry.redhat.io/ansible-automation-platform-25/aap-cloud-billing-rhel8
   - mirrors:
     - {{ prega_mirror }}/prega/test/openshift-gitops-1/gitops-rhel8
+    - {{ prega_mirror }}/prega/test/redhat-user-workloads/rh-openshift-gitops-tenant/gitops-rhel8
     source: registry.redhat.io/openshift-gitops-1/gitops-rhel8
   - mirrors:
     - {{ prega_mirror }}/prega/test/acm-d/hypershift-addon-rhel9-operator
@@ -1046,6 +1057,7 @@ spec:
     source: registry.redhat.io/acm-d/console-rhel9
   - mirrors:
     - {{ prega_mirror }}/prega/test/openshift-gitops-1/dex-rhel8
+    - {{ prega_mirror }}/prega/test/redhat-user-workloads/rh-openshift-gitops-tenant/dex-rhel8
     source: registry.redhat.io/openshift-gitops-1/dex-rhel8
   - mirrors:
     - {{ prega_mirror }}/prega/test/quay/quay-builder-qemu-rhcos-rhel8
@@ -1149,6 +1161,9 @@ spec:
   - mirrors:
     - {{ prega_mirror }}/prega/test/rhel8/postgresql-13
     source: registry.redhat.io/rhel8/postgresql-13
+  - mirrors:
+    - {{ prega_mirror }}/prega/test/rhel9/postgresql-13
+    source: registry.redhat.io/rhel9/postgresql-13
   - mirrors:
     - {{ prega_mirror }}/prega/test/openshift-service-mesh/istio-ztunnel-rhel9
     source: registry.redhat.io/openshift-service-mesh/istio-ztunnel-rhel9
@@ -1611,3 +1626,12 @@ spec:
   - mirrors:
     - {{ prega_mirror }}/prega/test/rhceph-dev/odf4-odf-blackbox-exporter-rhel9
     source: registry.redhat.io/odf4/odf-blackbox-exporter-rhel9
+  - mirrors:
+    - {{ prega_mirror }}/prega/test/redhat-user-workloads/rh-openshift-gitops-tenant/gitops-operator-bundle
+    source: quay.io/prega/test/redhat-user-workloads/rh-openshift-gitops-tenant/gitops-operator-bundle
+  - mirrors:
+    - {{ prega_mirror }}/prega/test/openshift-pipelines/pipelines-operator-bundle
+    source: quay.io/prega/test/openshift-pipelines/pipelines-operator-bundle
+  - mirrors:
+    - {{ prega_mirror }}/prega/test/rhceph-dev/rhceph-9-rhel9
+    source: registry.redhat.io/rhceph/rhceph-9-rhel9
